# SlackSweeper

./: .gitignore  docker-compose.yaml
src/backend/: Dockerfile  pyproject.toml
src/backend/etc/: entrypoint.sh
src/backend/slack_remover/: manage.py
src/backend/slack_remover/api/: admin.py  models.py  serializers.py  slack_wrapper.py  urls.py  views.py
src/backend/slack_remover/api/management/commands/: populate_db.py  slack_worker.py
src/backend/slack_remover/api/migrations/: 0001_initial.py  0002_auto_20201017_2040.py
src/backend/slack_remover/slack_remover/: asgi.py  settings.py  urls.py  wsgi.py
src/frontend/: Dockerfile  package.json
src/frontend/src/: App.js  utils.js
src/frontend/src/routes/: Channel.js  Channels.js  Manage.js  User.js  Users.js  Whitelist.js  WhitelistCreate.js  Whitelists.js
